P02 - Company/css/footer.css
.footer {
	text-align: center;
	margin-top: 4em;
}


.footer-nav {
	margin-top: 1.5rem;
	widows: 100%;
}

.footer-nav-item {
	font-family: 'Medium', Helvetica, sans-serif;
	letter-spacing: 0.08rem;
	margin-right: 2rem;
}

#search-input, input[type=search] {
	box-sizing: border-box;
	letter-spacing: 0.08rem;
  	color: rgb(187, 67, 43);
  	padding-bottom: 0.25rem;
  	width: 12.5rem;
 	margin: 8px 0;
  	border: none;
  	border-bottom: 1px solid rgb(187, 67, 43);
  	background-color: transparent;
  	text-align: left;
  	font-family: 'Medium', Helvetica, sans-serif;
}

::placeholder {
	color: rgb(195, 102, 41);
}

#search-input:focus {
	outline: none;
}

#search, input {
	font-family: 'Medium', Helvetica, sans-serif;
	color: rgb(187, 67, 43);
	font-size: 1rem;
}


a:hover, a:active, a:focus {
	color: rgba(187, 67, 43, 0.5);
}

hr {
	background-color: rgb(195, 102, 41);
	height: 1px;
	margin-top: 3rem;
	border: none;
}

